--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,23 +1,32 @@
-<form [formGroup]="form">
-    <div class="form-group">
-        <label for="username">Username</label>
-        <input formControlName="username" id="username" type="text" class="form-control">
-        <div *ngIf="username.touched && username.invalid">
-            <div *ngIf="username.errors.required"> This field is required</div>
-            <div *ngIf="username.errors.minlength"> Minimum {{username.errors.minlength.requiredLength}}</div>
-            <div *ngIf="username.errors.cannotContainSpace"> Cannot conatin space</div>
+<form [formGroup]="form" (ngSubmit)="login()">
+    <div *ngIf="form.errors" class="alert alert-danger">
+        User anme passowrd incoreetc
+    </div>
+    <div formGroupName="account">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input formControlName="username" id="username" type="text" class="form-control">
 
+            <div *ngIf="username.touched && username.invalid">
+                <div *ngIf="username.errors.required"> This field is required</div>
+                <div *ngIf="username.errors.minlength"> Minimum {{username.errors.minlength.requiredLength}}
+                </div>
+                <div *ngIf="username.errors.cannotContainSpace"> Cannot conatin space</div>
+                <div *ngIf="username.errors.UniqueUserName"> Should be Unique </div>
+
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input formControlName="password" id="password" type="text" class="form-control">
+
+            <div *ngIf="password.touched && password.invalid">
+                <div *ngIf="password.errors.required"> This field is required</div>
+                <div *ngIf="password.errors.minlength"> Minimum {{password.errors.minlength.requiredLength}}
+                </div>
+
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input formControlName="password" id="password" type="text" class="form-control">
-
-        <div *ngIf="password.touched && password.invalid">
-            <div *ngIf="password.errors.required"> This field is required</div>
-            <div *ngIf="password.errors.minlength"> Minimum {{password.errors.minlength.requiredLength}}</div>
-
-        </div>
-    </div>
-    <button class="btn btn-primary" type="submit">Sign Up</button>
+    <button class="btn btn-primary" type="submit">Log in</button>
 </form>
