--- a/src/app/password-change/password-change.component.html
+++ b/src/app/password-change/password-change.component.html
@@ -3,11 +3,11 @@
 
         <label For="oldPassword">Old Password</label>
         <input id="oldPassword" type="text" class="" [formControlName]="oldPassword">
-        <div *ngIf="oldPassword.touched && oldPassword.invalid" class="alert alert-danger">
-            <div *ngIf="oldPassword.errors.required">Old Paswprd is required</div>
-            <div *ngIf="oldPassword.errors.minLength">Old Paswprd should be minimum of
-                {{oldPassword.errors.minLength.requiredLength}}</div>
-            <div *ngIf="oldPassword.errors.OldPasswordMatchValidation">Old password is already taken </div>
+        <div *ngIf="getoldPassword.touched && oldPassword.invalid" class="alert alert-danger">
+            <div *ngIf="getoldPassword.errors.required">Old Paswprd is required</div>
+            <div *ngIf="getoldPassword.errors.minLength">Old Paswprd should be minimum of
+                {{getoldPassword.errors.minLength.requiredLength}}</div>
+            <div *ngIf="getoldPassword.errors.OldPasswordMatchValidation">Old password is already taken </div>
 
         </div>
 
@@ -16,10 +16,10 @@
     <div class="form-group">
         <label For="newPassword">New Password</label>
         <input id="newPassword" type="text" class="" [formControlName]="newPassword">
-        <div *ngIf="newPassword.touched && newPassword.invalid" class="alert alert-danger">
-            <div *ngIf="newPassword.errors.required">newPassword is required</div>
-            <div *ngIf="newPassword.errors.minLength">newPassword should be minimum of
-                {{newPassword.errors.minLength.requiredLength}}</div>
+        <div *ngIf="getnewPassword.touched && newPassword.invalid" class="alert alert-danger">
+            <div *ngIf="getnewPassword.errors.required">newPassword is required</div>
+            <div *ngIf="getnewPassword.errors.minLength">newPassword should be minimum of
+                {{getnewPassword.errors.minLength.requiredLength}}</div>
 
         </div>
 
